--- a/app/views/show_post_comments.erb
+++ b/app/views/show_post_comments.erb
@@ -9,6 +9,8 @@
   </form>
 
   <% @comments.each do |comment| %>
+    <div class="comment_upvote" value="<%=comment.id%>"></div>
+    <div id="comment_score"><%= comment.score%></div>
     <div id="comment_body"><%= comment.body%></div>
     <div id="comment_user"><%= comment.user.username%></div>
   <% end %>
