--- a/app/views/user_posts.erb
+++ b/app/views/user_posts.erb
@@ -2,6 +2,8 @@
 
   <% @posts.each do |post| %>
     <div id="post_title"><%= post.title%></div>
+    <div class="post_upvote" value="<%= post.id %>"></div>
+    <div id="post_score"><%= post.score%></div>
     <div id="post_url"><%= post.url%></div>
     <div id="post_user"><%= post.user%></div>
     <div id="post_comments"><a href="/posts/<%=post.id%>">Comments</a></div>
